--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:latest
+FROM ruby:2.6.6
 
 # Avoid warnings by switching to noninteractive
 ENV DEBIAN_FRONTEND=noninteractive
@@ -11,68 +11,18 @@ ARG USERNAME=vscode
 ARG USER_UID=1000
 ARG USER_GID=$USER_UID
 
-# Configure apt and install packages
-RUN apt-get update \
-    #
-    # Install vim, git, process tools, lsb-release
-    && apt-get install -y \
-        vim \
-        git \
-        openssh-client \
-        less \
-        iproute2 \
-        procps \
-        lsb-release \
-    #
-    # Install ruby
-    && apt-get install -y \
-        ruby \
-        ruby-dev \
-        build-essential \
-        libsqlite3-dev \
-        zlib1g-dev \
-        libxml2 \
-        freetds-dev \
-        freetds-bin \
-    #
-    # Install nodejs
-    && apt-get install -y nodejs \
-    # 
-    # Install yarn
-    && apt-get install -y curl apt-transport-https lsb-release \
-    && curl -sS https://dl.yarnpkg.com/$(lsb_release -is | tr '[:upper:]' '[:lower:]')/pubkey.gpg | apt-key add - 2>/dev/null \
-    && echo "deb https://dl.yarnpkg.com/$(lsb_release -is | tr '[:upper:]' '[:lower:]')/ stable main" | tee /etc/apt/sources.list.d/yarn.list \
-    && apt-get update \
-    && apt-get -y install --no-install-recommends yarn \
-    #
-    # Install debug tools
-    && gem install \
-        rake \
-        ruby-debug-ide \
-        debase \
-    #
     # Create a non-root user to use if preferred - see https://aka.ms/vscode-remote/containers/non-root-user.
-    && groupadd --gid $USER_GID $USERNAME \
+RUN groupadd --gid $USER_GID $USERNAME \
     && useradd -s /bin/bash --uid $USER_UID --gid $USER_GID -m $USERNAME \
     # [Optional] Add sudo support for the non-root user
+    && apt-get update \
     && apt-get install -y sudo \
     && echo $USERNAME ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/$USERNAME\
-    && chmod 0440 /etc/sudoers.d/$USERNAME \
-    #
-    # Clean up
-    && apt-get autoremove -y \
-    && apt-get clean -y \
-    && rm -rf /var/lib/apt/lists/*
+    && chmod 0440 /etc/sudoers.d/$USERNAME
 
-RUN gem install solargraph
+RUN apt-get install -y freetds-dev 
+
+RUN gem install bundler solargraph ruby-debug-ide
 
 # Switch back to dialog for any ad-hoc use of apt-get
 ENV DEBIAN_FRONTEND=dialog
-
-
-USER vscode 
-RUN /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
-USER root
-ENV PATH "$PATH:/home/linuxbrew/.linuxbrew/Homebrew/bin"
-
-RUN echo "eval \$($(brew --prefix)/bin/brew shellenv)" >>~/.profile
