--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "editor.tabSize": 2,
     "ruby.useLanguageServer": true,
-    "ruby.useBundler": true
+    "ruby.useBundler": true,
+    "solargraph.useBundler": true
 }
