--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "editor.tabSize": 2,
     "ruby.useLanguageServer": true,
     "ruby.useBundler": true,
-    "solargraph.useBundler": true
+    "solargraph.useBundler": true,
+    "solargraph.commandPath": ""
 }
