Removes githubtoken from source code.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,6 +4,12 @@
 	"name": "Data Inside",
 	"dockerFile": "Dockerfile",
 
+	"build": { 
+		"args": { 
+			"GITHUBTOKEN": "${localEnv:GITHUBTOKEN}"
+		} 
+	},
+
 	// Set *default* container specific settings.json values on container create.
 	"settings": { 
 		"terminal.integrated.shell.linux": "/bin/bash"
