Uses minimal builder imagebase.

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,6 +1,6 @@
 
 # Use intermediate stage to hide secret tokens from Docker history.
-FROM ruby:2.6.6 as builder 
+FROM mrnonz/alpine-git-curl as builder 
 
 ARG BRANCH=production
 
@@ -9,10 +9,8 @@ ARG GITHUBTOKEN
 # Invalidates the cache when the branch is changed
 RUN curl -o version.json https://${GITHUBTOKEN}:x-oauth-basic@api.github.com/repos/RobertCram/Data-Inside/git/refs/heads/${BRANCH}
 
-
 # Clones latest version of the production branch
 RUN mkdir /workspaces && cd /workspaces && git clone --branch ${BRANCH} https://RobertCram:${GITHUBTOKEN}@github.com/RobertCram/Data-Inside.git DataInside
-
 
 FROM ruby:2.6.6
 
